caso2/bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-service
spec:
  selector:
    matchLabels:
      app: fake-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fake-service
    spec:
      containers:
      - env:
        - name: NAME
          value: bff-gateway
        - name: HTTP_CLIENT_APPEND_REQUEST
          value: "true"
        image: nicholasjackson/fake-service:v0.26.2
        name: container
        ports:
        - containerPort: 9090
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
