caso2/bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: fake-service
